	(diredc-frame-inherited-parameters)
	(diredc-hist-find-alternate-file, diredc-recover, diredc): New
	feature: customizable frame-parameters.

2024-01-15  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-recover-schemes, diredc-hist-up-directory)
	(diredc-hist-find-alternate-file, diredc-exit, diredc-recover)
	(diredc-hist-duplicate): Bugfix: stop creating windows above
	others

2022-01-12  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-browse--hook-function): Fontify browse
	buffers.

2021-06-13  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-wdired): Add helpful message for edit mode.

2021-06-13  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--hook-function): Remap faces buffer-locally.

2021-06-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--advice--repeat-over-lines, diredc-mode): Fix
	Emacs bug #48883: Improper marking.

2021-06-09  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-hist-previous-directory, diredc-hist-change-directory)
	(diredc-hist-up-directory): Fix navigation to restore-point when
	dired-omit-mode is not active.

2021-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--chmod-font-lock-regex): Account for ACL
	directories.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc-beginning-of-buffer, diredc-end-of-buffer):
	New DWIM functions.
	(diredc--create-keymap): Bind them.

2021-06-03  Boruch Baum  <boruch_baum@gmx.com>

	* diredc.el (diredc--report-counts-and-sizes): New feature, for
	displaying summary of marked files in (new) header-line.
	(diredc-header-line, diredc-header-*-marks)
	(diredc-header-D-marks): Faces for new feature.
	(diredc-header-line): defcustom to toggle new feature.
	(diredc--thousands): Support function, for improved readability.
	(diredc--mark-msg): New helper function for feature.
	(diredc-thousands-separator): Option for the support function.
	(diredc-mode, diredc--hook-function): Make use of header-line
	consistent.